<resources>
    <string name="cta_dialog_title">Terms and Conditions</string>
    <string name="cta_dialog_msg">Security Center may need to connect to the internet to get updates.</string>
    <string name="cta_checkbox_title">"Don't show again"</string>
    <string name="cta_button_text_cancel">Cancel</string>
    <string name="cta_button_text_agree">OK</string>
    <string name="cta_settings">Allow internet connection</string>
    <string name="title_antivirus">Tencent’s Privacy Policy</string>
    <string name="header_antivirus">"This feature encrypts and uploads your device's ID to Tencent's servers (%s)."</string>
    <string name="name_antivirus">view Privacy Policy</string>
    <string name="text_antivirus">Upload app names and details</string>
    <string name="text_antivirus_oversea">Update virus definitions</string>
    <string name="summary_antivirus">Upload and scan app names and details using online virus definitions.</string>
    <string name="summary_antivirus_oversea">Update virus definitions automatically</string>
    <string name="button_antivirus">OK</string>
    <string name="power_center_title">Power</string>
    <string name="power_center_consume_rank">Battery use</string>
    <string name="power_center_custom_title">Battery profiles</string>
    <string name="power_center_auto_shutdown">Schedule power on/off</string>
    <string name="power_center_auto_shutdown_summary_default">Power your device on or off at a scheduled time</string>
    <string name="power_center_ontime_boot">Power on time</string>
    <string name="power_center_time_to_boot">Power on time</string>
    <string name="power_center_repeat">Repeat</string>
    <string name="power_center_ontime_shutdown">Power off time</string>
    <string name="power_center_time_to_shutdown">Power off time</string>
    <string name="power_center_custom_summary_default">Improve battery life with custom profiles</string>
    <string name="power_center_low_battery_title">Battery saver</string>
    <string name="power_center_low_battery_summary_default">Switch profiles when battery is low</string>
    <string name="power_center_low_battery_summary_dynamic">At %1$d%% switch to %2$s</string>
    <string name="power_center_on_time_title">Schedule profile switch</string>
    <string name="power_center_on_time_summary_default">Switch battery profiles at scheduled time</string>
    <string name="power_center_on_time_summary_dynamic">%1$s - %2$s switch to %3$s</string>
    <string name="power_center_state_on">On</string>
    <string name="power_center_state_off">Off</string>
    <string name="power_center_consume_time">%1$sremaining</string>
    <string name="power_center_charge_time">%1$suntil full</string>
    <string name="power_center_battery_full">Battery fully charged</string>
    <string name="power_chooser_title">Battery profiles</string>
    <string name="power_chooser_check_box_title">Choose profile</string>
    <string name="power_chooser_check_box_summary">Choose a profile to improve battery life</string>
    <string name="power_chooser_smart_title">Default</string>
    <string name="power_chooser_smart_summary">Clear background processes when device is locked</string>
    <string name="power_chooser_standby_title">Marathon</string>
    <string name="power_chooser_standby_summary">Turn off WLAN and data services</string>
    <string name="power_chooser_sleep_title">Sleep</string>
    <string name="power_chooser_sleep_summary">Turn off all network functions (calls, SMS, WLAN, and data services) except for alarm clock</string>
    <string name="power_chooser_mine_title">Custom</string>
    <string name="power_chooser_mine_summary">Add profile</string>
    <string name="power_chooser_user_define_title">Add profile</string>
    <string name="power_chooser_user_define_summary">Add profile</string>
    <string name="power_customizer_smart_mode">Default</string>
    <string name="power_customizer_standby_mode">Marathon</string>
    <string name="power_customizer_sleep_mode">Sleep</string>
    <string name="power_customizer_my_mode">Custom</string>
    <string name="power_customizer_user_define_mode">Name</string>
    <string name="power_customizer_user_define_name">My profile</string>
    <string name="power_customizer_user_define_summary">User defined settings</string>
    <string name="power_customizer_delete">Delete</string>
    <string name="power_customizer_save">Save</string>
    <string name="power_customizer_cancel">Cancel</string>
    <string name="power_customizer_ok">OK</string>
    <string name="power_mode_cpu_state">CPU usage</string>
    <string name="power_mode_cpu_state_performance">Performance</string>
    <string name="power_mode_cpu_state_performance_desc">Make performance a priority over battery life</string>
    <string name="power_mode_cpu_state_balance">Balance</string>
    <string name="power_mode_cpu_state_balance_desc">Only increase CPU performance as needed</string>
    <string name="power_mode_cpu_state_save">Battery saving</string>
    <string name="power_mode_cpu_state_save_desc">Make battery life a priority over performance</string>
    <string name="power_mode_auto_clean_memory">Clean memory</string>
    <string name="power_mode_auto_clean_memery_lock_screen">After %1$d mins</string>
    <string name="power_mode_auto_clean_memory_in_one_minute">After 1 minute</string>
    <string name="power_mode_auto_clean_memory_in_five_minutes">After 5 minutes</string>
    <string name="power_mode_auto_clean_memory_in_ten_minutes">After 10 minutes</string>
    <string name="power_mode_auto_clean_memory_never">Never</string>
    <string name="power_mode_screen_brightness">Brightness</string>
    <string name="power_mode_screen_brightness_manual">Manual: %1$d%%</string>
    <string name="power_mode_screen_brightness_automatic">Automatic: %1$d%%</string>
    <string name="power_save_choose_mode">Choose a profile</string>
    <string name="power_save_low_battery_auto_save_title">Battery saver</string>
    <string name="power_save_low_battery_seekbar_title">Switch battery profiles when remaining power is less than %1$d%%</string>
    <string name="power_save_low_battery_option_title">If battery is low, switch to</string>
    <string name="power_save_low_battery_percentage_ten">10%</string>
    <string name="power_save_low_battery_percentage_twenty">20%</string>
    <string name="power_save_low_battery_percentage_thirty">30%</string>
    <string name="power_save_low_battery_percentage_forty">40%</string>
    <string name="power_save_low_battery_percentage_fifty">50%</string>
    <string name="power_save_on_time_auto_save_title">Schedule profile switch</string>
    <string name="power_save_on_time_start_time_summary">Start</string>
    <string name="power_save_on_time_end_time_summary">End</string>
    <string name="power_save_on_time_option_title">During this period switch to</string>
    <string name="power_save_on_time_goout_title">After this period switch back to</string>
    <string name="power_save_choose_recovery_mode">Choose a profile</string>
    <string name="power_save_low_battery_option_recovery_title">If battery recovers, switch to</string>
    <string name="power_exitlowbattery_whencharge">Disable when plugged in</string>
    <string name="preference_key_create_shortcut">key_create_shortcut</string>
    <string name="preference_key_about_version">key_about_version</string>
    <string name="preference_key_shortcut_quick_cleanup">key_shortcut_quick_cleanup</string>
    <string name="preference_key_shortcut_optimize_center">_key_shortcut_optimize_center</string>
    <string name="preference_key_shortcut_power_center">key_shortcut_power_center</string>
    <string name="preference_key_shortcut_network_assistant">key_shortcut_network_assistant</string>
    <string name="preference_key_shortcut_antispam">key_shortcut_antispam</string>
    <string name="preference_key_shortcut_virus_center">key_shortcut_virus_center</string>
    <string name="preference_key_shortcut_perm_center">key_shortcut_perm_center</string>
    <string name="preference_key_create_permanent_notification">key_create_permanent_notification</string>
    <string name="preference_key_module_garbage_cleanup">key_garbage_cleanup</string>
    <string name="preference_key_module_network_assistant">key_network_assistant</string>
    <string name="preference_key_module_antipam">module_antipam</string>
    <string name="preference_key_module_power_center">module_power_center</string>
    <string name="preference_key_module_antivirus">key_module_antivirus</string>
    <string name="preference_key_module_permissions">key_module_permissions</string>
    <string name="preference_key_open_virus_install_monitor">key_open_virus_install_monitor</string>
    <string name="preference_key_cta_settings">key_cta_settings</string>
    <string name="preference_key_category_title_module_settings">key_category_title_module_settings</string>
    <string name="preference_key_lock_screen_memory_clean">lock_screen_memory_clean</string>
    <string name="preference_category_key_reference_settings">key_reference_settings</string>
    <string name="preference_category_key_virus_lib_auto_update">key_category_virus_lib_auto_update</string>
    <string name="preference_key_month_report_switch">key_month_report_switch</string>
    <string name="preference_key_antivirus_choose_engine">key_antivirus_choose_engine</string>
    <string name="btn_text_quick_cleanup">Clean up</string>
    <string name="activity_title_antivirus">Virus scan</string>
    <string name="activity_title_networkassistants">Data usage</string>
    <string name="activity_title_antispam">Blocklist</string>
    <string name="activity_title_license_manager">Permissions</string>
    <string name="activity_title_power_manager">Battery usage</string>
    <string name="activity_title_garbage_cleanup">Cleaner</string>
    <string name="menu_item_about_title">About</string>
    <string name="menu_item_about_summary">Version %s</string>
    <string name="menu_item_shortcut_title">Manage shortcuts</string>
    <string name="menu_item_shortcut_summary">Place features on your Home screen</string>
    <string name="menu_item_notification_title">Show menu in notification shade</string>
    <string name="pref_category_title_securitycenter_settings">General</string>
    <string name="pref_category_title_module_settings">Feature settings</string>
    <string name="pref_category_title_virus_lib_auto_update">Automatically update definitions</string>
    <string name="pref_category_title_reference_settings">Additional settings</string>
    <string name="menu_item_virus_install_monitor_title">Scan before installing</string>
    <string name="menu_item_virus_install_monitor_summary">Check apps for viruses before installing</string>
    <string name="hints_virus_name_title">Virus:</string>
    <string name="hints_virus_descx_title">Description:</string>
    <string name="button_text_clear">Clear</string>
    <string name="root_apply_title">Important warning</string>
    <string name="button_text_accept">Accept</string>
    <string name="button_text_reject">Reject</string>
    <string name="manual_item_white_list_title">Exceptions</string>
    <string name="manual_item_white_list_summary">Prevent selected apps from being optimized</string>
    <string name="pref_category_title_lock_screen_memory_clean">Clean at lock screen</string>
    <string name="pref_title_lock_screen_memory_clean">Clean at lock screen</string>
    <string name="month_report_disconnect_tip">"Can't connect to the network"</string>
    <string name="month_report_click_reconnect_network">Try again</string>
    <string name="month_report_month_report_switch">Show monthly report</string>
    <string name="month_report_share_loading">Just a sec…</string>
    <string name="antivirus_choose_engine_settings">Virus definition settings</string>
    <string name="antivirus_choose_engine_title">Definitions</string>
</resources>