<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_title_securitycenter_settings" android:key="@string/preference_key_category_title_module_settings">
        <CheckBoxPreference android:title="@string/menu_item_notification_title" android:key="@string/preference_key_create_permanent_notification" />
        <CheckBoxPreference android:title="@string/cta_settings" android:key="@string/preference_key_cta_settings" />
        <CheckBoxPreference android:title="@string/month_report_month_report_switch" android:key="@string/preference_key_month_report_switch" />
        <Preference android:title="@string/menu_item_shortcut_title" android:key="@string/preference_key_create_shortcut" android:summary="@string/menu_item_shortcut_summary" />
        <Preference android:title="@string/manual_item_white_list_title" android:key="preference_key_manual_item_white_list" android:summary="@string/manual_item_white_list_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_title_lock_screen_memory_clean">
        <miui.preference.ValuePreference android:persistent="false" android:title="@string/pref_title_lock_screen_memory_clean" android:key="@string/preference_key_lock_screen_memory_clean" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_title_module_settings" android:key="@string/preference_key_category_title_module_settings">
        <Preference android:title="@string/activity_title_garbage_cleanup" android:key="@string/preference_key_module_garbage_cleanup" />
        <Preference android:title="@string/activity_title_networkassistants" android:key="@string/preference_key_module_network_assistant" />
        <Preference android:title="@string/activity_title_antispam" android:key="@string/preference_key_module_antipam" />
        <Preference android:title="@string/activity_title_power_manager" android:key="@string/preference_key_module_power_center" />
        <Preference android:title="@string/activity_title_antivirus" android:key="@string/preference_key_module_antivirus" />
        <Preference android:title="@string/activity_title_license_manager" android:key="@string/preference_key_module_permissions" />
    </PreferenceCategory>
    <PreferenceCategory android:title="">
        <Preference android:title="@string/menu_item_about_title" android:key="@string/preference_key_about_version" android:summary="@string/menu_item_about_summary" />
    </PreferenceCategory>
</PreferenceScreen>
