<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/title" android:paddingTop="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/power_save_low_battery_seekbar_title" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/power_save_low_battery_percentage_ten" />
        <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/power_save_low_battery_percentage_twenty" />
        <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/power_save_low_battery_percentage_thirty" />
        <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/power_save_low_battery_percentage_forty" />
        <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/power_save_low_battery_percentage_fifty" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <miui.widget.SeekBar android:id="@id/seekbar" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>
