<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/icon" android:layout_width="43.0dip" android:layout_height="43.0dip" />
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip">
            <TextView android:textAppearance="@269287432" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            <TextView android:textAppearance="@269287449" android:id="@id/summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hints_virus_name_title" style="@miui:style/TextAppearance.List.Primary" />
        <TextView android:id="@id/virus_name" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@miui:style/TextAppearance.List.Secondary" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="12.0dip" android:layout_weight="1.0">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hints_virus_descx_title" style="@miui:style/TextAppearance.List.Primary" />
        <TextView android:id="@id/virus_descx" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" style="@miui:style/TextAppearance.List.Secondary" />
    </LinearLayout>
    <FrameLayout android:paddingLeft="8.0dip" android:paddingTop="18.0dip" android:paddingRight="8.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_gravity="center" android:id="@id/clear" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_text_clear" />
    </FrameLayout>
</LinearLayout>
